force-app/main/default/objects/Event_Log_Publication__c/Event_Log_Publication__c.object-meta.xml
<CustomObject>
    <description>Published event logs from Apex and Flow sources</description>
    <label>Event Log Publication</label>
    <nameField>
        <displayFormat>EL-{0000000}</displayFormat>
        <label>Event Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Log Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>