force-app/main/default/objects/Event_Log_Publication__c/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <description>The date and time at which the log was created</description>
    <inlineHelpText>The date and time at which the log was created</inlineHelpText>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>