force-app/main/default/objects/Event_Log_Publication__c/fields/Executing_User__c.field-meta.xml
<CustomField>
    <fullName>Executing_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User that executed the Flow or Apex</description>
    <inlineHelpText>The User that executed the Flow or Apex</inlineHelpText>
    <label>Executing User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Log_Publications</relationshipName>
    <type>Lookup</type>
</CustomField>