force-app/main/default/objects/Event_Log_Publication__c/fields/Interview_Guid__c.field-meta.xml
<CustomField>
    <fullName>Interview_Guid__c</fullName>
    <description>The Flow interview&#39;s Globally Unique Identifier</description>
    <inlineHelpText>The Flow interview&#39;s Globally Unique Identifier</inlineHelpText>
    <label>Interview Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>