force-app/main/default/objects/Event_Log_Publication__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The actual event message</description>
    <inlineHelpText>The actual event message</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>