force-app/main/default/objects/Event_Log_Publication__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Specific source origin of the event</description>
    <inlineHelpText>Specific source origin of the event</inlineHelpText>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>