force-app/main/default/objects/Event_Log_Publication__c/fields/Origin_Type__c.field-meta.xml
<CustomField>
    <fullName>Origin_Type__c</fullName>
    <description>The origin type, Flow or Apex</description>
    <inlineHelpText>The origin type, Flow or Apex</inlineHelpText>
    <label>Origin Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>