force-app/main/default/objects/Event_Log_Publication__c/fields/Related_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_Record__c</fullName>
    <description>The Id of the event&#39;s related record</description>
    <inlineHelpText>The Id of the event&#39;s related record</inlineHelpText>
    <label>Related Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>