force-app/main/default/objects/Event_Log_Publication__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of event: error, warning or exception</description>
    <inlineHelpText>The type of event: error, warning or exception</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>